spec/error_logical_keyword_removed.expected
spec/error_logical_keyword_removed.kex:6:16: error: Undefined name: `and` — did you mean `x`?
spec/error_logical_keyword_removed.kex:6:16: error: Undefined identifier: and
Aborted: fix type errors before running (use --no-check to skip).
